# plastic

./: .editorconfig  Cargo.toml  README.md
.cargo/: config
core/: Cargo.toml
core/src/: context.rs  lib.rs
core/src/exec/: mod.rs
core/src/syntax/ast/: keyword.rs  mod.rs  operator.rs  position.rs  punctuator.rs
core/src/syntax/lexer/: comment.rs  cursor.rs  error.rs  identifier.rs  mod.rs  number.rs  operator.rs  spread.rs  string.rs  tests.rs  token.rs
core/src/syntax/parser/: mod.rs
core/src/syntax/parser/cursor/: mod.rs
plastic/src/syntax/ast/: constant.rs  keyword.rs  mod.rs
plastic/src/syntax/lexer/: mod.rs  token.rs
plastic/src/syntax/parser/cursor/: mod.rs
src/lib/: lib.rs
src/lib/syntax/: lexer.rs
src/lib/syntax/ast/: expr.rs  pos.rs  punc.rs  token.rs
src/lib/syntax/lexer/: mod.rs
src/lib/syntax/parser/: mod.rs
src/syntax/lexer/: token.rs
